...
    uiState: MenuUiState,
    drawerState: DrawerState,
    onCloseDrawer: () -> Unit,
    scrollState: ScrollState,
    innerPadding: PaddingValues,
    onNavigateToNotifications: () -> Unit,
    showCloseSessionDialog: () -> Unit,
    navigateToPaymentMarketScreen: () -> Unit
) {

    if (drawerState.isOpen) {
        BackHandler {
            drawerViewModel.updateUserPreferences()
            onCloseDrawer()
        }
    }

    Column(
        modifier = Modifier
            .fillMaxSize().testTag("CONTENT_MAIN_MENU")
            .padding(innerPadding)
            .background(MaterialTheme.colorScheme.surface)
    ) {
        // Header
        UserProfileCard(
            userName = uiState.userName.ifEmpty { "Nombre vacío o error de red." },
...

                    }

                    // Sección inferior con "Cerrar sesión"
                    Column {
                        MenuOptionItem(
                            testTag = "MenuOptionItemCloseSession",
                            icon = Icons.AutoMirrored.Filled.ExitToApp,
                            text = stringResource(R.string.cerrar_sesion),
                            onClick = { showCloseSessionDialog() },
                            drawable = R.drawable.ic_logout
                        )
                        Spacer(modifier = Modifier.height(16.dp))
...
