...
            )
        }
    } else {
        Box(
            modifier = Modifier
                .fillMaxSize()
                .testTag("CommunityScreen")
        ) {
            Column(
                modifier = Modifier
                    .fillMaxSize()
                    .background(MaterialTheme.colorScheme.background)
            ) {
...
                        )
                    }
                }else{
                    LazyColumn(
                        modifier = Modifier
                            .fillMaxSize()
                            .testTag("COMMUNITY_LIST")
                    ) {

                        items(filteredPosts) { post: Post ->

                            val index = uiState.posts.indexOf(post)
                            val projectData = uiState.localProjects.find {
...
