...
                    fontWeight = FontWeight.Medium
                )
            )

            FloatingActionButton(
                onClick = { goToLogin() },
                modifier = Modifier.size(56.dp).testTag("COMENZAR_BUTTON"),
                containerColor = MaterialTheme.colorScheme.primary,
                contentColor = MaterialTheme.colorScheme.onPrimary
            ) {
                Icon(
                    imageVector = Icons.AutoMirrored.Filled.ArrowForward,
                    contentDescription = "Comenzar",
...
